# ACCL

driver/utils/accl_network_utils/src/: accl_network_utils.cpp
driver/xrt/: .gitignore  CMakeLists.txt  run.sh
driver/xrt/include/: accl-comm.hpp  accl-consts.hpp  accl-dac.hpp  accl-device.hpp  accl-util.hpp  timing.hpp  xlnx-comm.hpp  xlnx-consts.hpp  xlnx-device.hpp
driver/xrt/scripts/: bench_nop.sh  run1-short.sh  run1.sh  run2.sh  run3-short.sh  run3.sh
driver/xrt/src/: CMakeLists.txt  accl.cpp  bo.cpp  main.cpp
driver/xrt/test/: CMakeLists.txt  test_ip_conv.cpp  test_regio.cpp  test_regio.sh  test_sendrecv.cpp  test_sendrecv.sh
kernels/cclo/fw/sw_apps/ccl_offload_control/src/: ccl_offload_control.c
kernels/cclo/hls/dma_mover/: dma_mover.cpp
kernels/cclo/hls/eth_intf/: tcp_depacketizer.cpp
kernels/plugins/: Makefile
kernels/plugins/cclo_benchmark/: Makefile  build_cclo_benchmark.tcl  cclo_benchmark.cpp  cclo_benchmark.h
synths/: synth_benchmark.sh
test/hardware/: Makefile
test/hardware/config/: link_config_u280_benchmark.ini
test/host/debug/: Makefile  extract_mmi.tcl  update_xclbin_fw.sh
test/host/hls/: CMakeLists.txt  benchmark.cpp  test.cpp
test/host/xrt/: test.cpp
test/host/xrt/include/: fixture.hpp
test/host/xrt/src/: test.cpp
test/model/emulator/: cclo_emu.cpp
test/model/zmq/: zmq_server.cpp  zmq_server.h
